--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -98,6 +98,11 @@
 		display: none;
 	}
 
+	.socialMediaLogos {
+		height: 57px;
+		width: 57px;
+	}
+
 /* Box Model */
 
 	*, *:before, *:after {
@@ -4146,20 +4151,83 @@
 }
 
 @media screen and (max-width: 724px) {
+
+	#header {
+		height: 100vh;
+	}
+
+	#logo {
+		padding: 0 0 2em 0;
+		margin-left: 6.4em;
+		margin-top: 2em;
+	}
+
 	.hidesOnMobile {
 		display: none;
 	}
 
 	.displaysOnMobile {
 		display: block;
+	}
+
+	#header .inner {
+		margin-left: 2.3em;
+		margin-bottom: 2em;
+		text-align: left;
+	}
+
+	#title {
+		font-size: 30px;
+	}
+
+	#subtitle {
+		font-size: 30px;
+	}
+
+	.bodyText {
+		font-size: 15px;
+	}
+
+	#header .content {
+		padding: 0;
+		margin: 0;
 		text-align: center;
 	}
 
 	#mobileAppScreenImage {
-		text-align: center;
 		max-width: 75%;
 		max-height: 75%;
-		margin: 0;
-		padding: 0;
 	}
+
+	#mobileAppStoreButton {
+		margin-left: 1.82em;
+	}
+}
+
+@media screen and (max-width: 420px) {
+
+	#logo {
+		margin-left: 5.8em;
+	}
+
+	#title {
+		font-size: 28px;
+	}
+
+	#subtitle {
+		font-size: 28px;
+	}
+
+	.bodyText {
+		font-size: 12px;
+	}
+
+	#mobileAppStoreButton {
+		margin-left: 1.4em;
+	}
+
+	#header .inner {
+		margin-bottom: 0;
+	}
+
 }
