Fixed ipad sizing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -45,6 +45,7 @@
 		color: #393939;
 		font-size: 45px;
 		margin-bottom: .2em;
+		padding-top: 1.5em;
 		font-weight: 600;
 		line-height: 1.35em;
 	}
@@ -65,9 +66,10 @@
 	}
 
 	#logo {
-		max-width: 25%;
-		max-height: 25%;
+		max-width: 20%;
+		max-height: 20%;
 		padding: 1em 0 4em .2em;
+		margin-top: 1.5em;
 	}
 
 	#subText {
@@ -4151,7 +4153,7 @@
 
 }
 
-@media screen and (max-width: 724px) {
+@media screen and (max-width: 768px) {
 
 	#header {
 		height: 100vh;
@@ -4183,6 +4185,7 @@
 
 	#title {
 		font-size: 28px;
+		padding-top: 0;
 	}
 
 	#subtitle {
@@ -4207,6 +4210,10 @@
 	#mobileAppStoreButton {
 		margin-left: 1.82em;
 	}
+}
+
+@media screen and (max-width: 768px) and (max-height: 1028px) {
+	
 }
 
 @media screen and (max-width: 420px) {
