--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -45,7 +45,7 @@
 		color: #393939;
 		font-size: 45px;
 		margin-bottom: .2em;
-		padding-top: 1.5em;
+		padding-top: 0;
 		font-weight: 600;
 		line-height: 1.35em;
 	}
@@ -69,7 +69,7 @@
 		max-width: 20%;
 		max-height: 20%;
 		padding: 1em 0 4em .2em;
-		margin-top: 1.5em;
+		margin-top: 5em;
 	}
 
 	#subText {
