Added iphone6plus image

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4011,6 +4011,11 @@
 
 		}
 
+	/* Iphone 6plus */
+	@media screen and (max-width: 414px) {
+		
+	}
+
 	@media screen and (max-width: 480px) and (orientation: landscape) {
 
 		#header {
