--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -46,15 +46,15 @@
 		font-size: 45px;
 		margin-bottom: .2em;
 		padding-top: 0;
+		font-weight: 600;
 		line-height: 1.35em;
-		font-family: "HelveticaNeue-Medium", Arial, Helvetica, sans-serif;
 	}
 
 	#subtitle {
 		color: #5124A0;
 		font-size: 45px;
 		margin: .25em 0 .45em 0;
-		font-family: "HelveticaNeue-Medium", Arial, Helvetica, sans-serif;
+		font-weight: 600;
 		line-height: 1.35em;
 	}
 
