--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4172,7 +4172,7 @@
 
 	#logo {
 		padding: 0 0 2em 0;
-		margin-left: 12.4em;
+		margin-left: 13.3em;
 		margin-top: 2em;
 	}
 
@@ -4195,26 +4195,26 @@
 	}
 
 	#title {
-		font-size: 28px;
-		margin-left: 4.5em;
+		font-size: 30px;
+		margin-left: 4.3em;
 		padding-top: 0;
 	}
 
 	#subtitle {
-		font-size: 28px;
-		margin-left: 4.5em;
+		font-size: 30px;
+		margin-left: 4.3em;
 	}
 
 	.bodyText {
-		font-size: 15px;
-		margin-left: 8.4em;
+		font-size: 18px;
+		margin-left: 7.3em;
 	}
 
 	#header .content {
 		padding: 0;
 		margin: 0;
-		text-align: center;
 	}
+
 
 	#mobileAppScreenImage {
 		margin-top: 6.5em;
@@ -4229,10 +4229,24 @@
 	}
 }
 
+@media screen and (max-width: 768px) and (min-width: 450px) {
+	#logo {
+		height: 25%;
+		width: 25%;
+	}
+
+
+	#mobileAppScreenImage {
+		margin-top: 6.5em;
+		max-width: 50%;
+		max-height: 50%;
+	}
+}
+
 @media screen and (max-width: 420px) {
 
 	#logo {
-		margin-left: 5.5em;
+		margin-left: 5.75em;
 	}
 
 	#title {
@@ -4251,7 +4265,7 @@
 	}
 
 	#mobileAppStoreButton {
-		margin-left: 3.55em;
+		margin-left: 3.9em;
 	}
 
 	#header .inner {
@@ -4260,7 +4274,7 @@
 
 	#mobileAppScreenImage {
 		margin-top: 0;
-		margin-left: .5em;
+		margin-left: 1.2em;
 	}
 
 }
